--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.21",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@reduxjs/toolkit": "^2.2.6",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
