--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0"
   },
