--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.21",
     "@radix-ui/react-dialog": "^1.1.1",
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.13",
